--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -1,57 +1,29 @@
 {
-  "name": "@rizrmdhn/web",
-  "version": "0.1.0",
+  "name": "web",
   "private": true,
+  "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "build": "pnpm with-env next build",
-    "check": "pnpm run typecheck && pnpm run lint && pnpm run format",
-    "clean": "git clean -xdf .cache .next .turbo node_modules",
-    "dev": "pnpm with-env next dev --turbo",
-    "format": "prettier --check . --ignore-path ../../.gitignore",
-    "lint": "eslint",
-    "sort:package": "pnpm dlx sort-package-json",
-    "start": "pnpm with-env next start",
-    "typecheck": "tsc --noEmit",
-    "with-env": "dotenv -e ../../.env --"
+    "dev": "vite",
+    "build": "tsc -b && vite build",
+    "lint": "eslint .",
+    "preview": "vite preview"
   },
   "dependencies": {
-    "@node-rs/argon2": "^2.0.2",
-    "@rizrmdhn/api": "workspace:*",
-    "@rizrmdhn/auth": "workspace:*",
-    "@rizrmdhn/db": "workspace:*",
-    "@rizrmdhn/ui": "workspace:*",
-    "@rizrmdhn/validators": "workspace:*",
-    "@t3-oss/env-nextjs": "^0.12.0",
-    "@tanstack/react-query": "catalog:",
-    "@tanstack/react-query-devtools": "catalog:",
-    "@trpc/client": "catalog:",
-    "@trpc/react-query": "catalog:",
-    "@trpc/server": "catalog:",
-    "babel-plugin-react-compiler": "19.0.0-beta-27714ef-20250124",
-    "geist": "^1.3.1",
-    "js-cookie": "^3.0.5",
-    "lucide-react": "^0.474.0",
-    "next": "15.1.6",
-    "react": "catalog:react18",
-    "react-dom": "catalog:react18",
-    "superjson": "^2.2.2",
-    "zod": "^3.24.1"
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0"
   },
   "devDependencies": {
-    "@rizrmdhn/eslint-config": "workspace:*",
-    "@rizrmdhn/prettier-config": "workspace:*",
-    "@rizrmdhn/tailwind-config": "workspace:*",
-    "@rizrmdhn/tsconfig": "workspace:*",
-    "@types/js-cookie": "^3.0.6",
-    "@types/node": "catalog:",
-    "@types/react": "catalog:react18",
-    "@types/react-dom": "catalog:react18",
-    "dotenv-cli": "^8.0.0",
-    "jiti": "^1.21.7",
-    "postcss": "^8.5.1",
-    "postcss-load-config": "^6.0.1",
-    "tailwindcss": "catalog:",
-    "typescript": "catalog:"
+    "@eslint/js": "^9.19.0",
+    "@types/react": "^19.0.8",
+    "@types/react-dom": "^19.0.3",
+    "@vitejs/plugin-react-swc": "^3.5.0",
+    "eslint": "^9.19.0",
+    "eslint-plugin-react-hooks": "^5.0.0",
+    "eslint-plugin-react-refresh": "^0.4.18",
+    "globals": "^15.14.0",
+    "typescript": "~5.7.2",
+    "typescript-eslint": "^8.22.0",
+    "vite": "^6.1.0"
   }
 }
