--- a/packages/auth/package.json
+++ b/packages/auth/package.json
@@ -24,17 +24,15 @@
   "dependencies": {
     "@t3-oss/env-nextjs": "^0.12.0",
     "jose": "^5.9.6",
-    "next": "15.1.6",
-    "react": "catalog:react18",
-    "react-dom": "catalog:react18",
+    "js-cookie": "^3.0.5",
     "zod": "^3.24.1"
   },
   "devDependencies": {
     "@rizrmdhn/eslint-config": "workspace:*",
     "@rizrmdhn/prettier-config": "workspace:*",
     "@rizrmdhn/tsconfig": "workspace:*",
+    "@types/js-cookie": "^3.0.6",
     "@types/node": "catalog:",
-    "@types/react": "catalog:react18",
     "dotenv-cli": "^8.0.0",
     "eslint": "catalog:",
     "prettier": "catalog:",
