feat: integrate Tailwind CSS and TRPC; add utility functions for API and session management

--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -5,27 +5,48 @@
   "type": "module",
   "scripts": {
     "build": "pnpm with-env tsc -b && vite build",
-    "dev": "pnpm with-env tsc -b --watch & vite",
     "clean": "git clean -xdf .cache .next .turbo node_modules",
-    "lint": "eslint",
+    "dev": "pnpm with-env vite",
     "format": "prettier --check . --ignore-path ../../.gitignore",
+    "lint": "eslint",
     "preview": "vite preview",
     "sort:package": "pnpm dlx sort-package-json",
     "typecheck": "tsc --noEmit",
-    "with-env": "dotenv -e ../../.env --"
+    "with-env": "dotenv -e ../../.env --",
+    "tailwindcss:init": "pnpm dlx tailwindcss init -p"
   },
   "dependencies": {
+    "@radix-ui/react-slot": "^1.1.2",
+    "@rizrmdhn/api": "workspace:*",
+    "@t3-oss/env-core": "^0.12.0",
+    "@tailwindcss/vite": "^4.0.3",
+    "@tanstack/react-query": "catalog:",
+    "@trpc/client": "catalog:",
+    "@trpc/react-query": "catalog:",
+    "@trpc/server": "catalog:",
+    "autoprefixer": "^10.4.20",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "lucide-react": "^0.474.0",
     "react": "catalog:react18",
-    "react-dom": "catalog:react18"
+    "react-dom": "catalog:react18",
+    "react-router": "^7.1.5",
+    "superjson": "^2.2.2",
+    "tailwind-merge": "^2.6.0",
+    "tailwindcss": "^4.0.3",
+    "tailwindcss-animate": "^1.0.7",
+    "zod": "^3.24.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.19.0",
     "@rizrmdhn/eslint-config": "workspace:*",
     "@rizrmdhn/prettier-config": "workspace:*",
     "@rizrmdhn/tsconfig": "workspace:*",
+    "@types/node": "catalog:",
     "@types/react": "catalog:react18",
     "@types/react-dom": "catalog:react18",
     "@vitejs/plugin-react-swc": "^3.5.0",
+    "dotenv-cli": "^8.0.0",
     "eslint": "catalog:",
     "eslint-plugin-react-refresh": "^0.4.18",
     "globals": "^15.14.0",
