--- a/apps/web/turbo.json
+++ b/apps/web/turbo.json
@@ -6,8 +6,6 @@
       "dependsOn": ["^build"],
       "outputs": ["dist"]
     },
-    "dev": {
-      "persistent": true
-    }
+    "dev": {}
   }
 }
