--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -13,11 +13,16 @@
     "sort:package": "pnpm dlx sort-package-json",
     "typecheck": "tsc --noEmit",
     "with-env": "dotenv -e ../../.env --",
+    "ui-add": "pnpm dlx shadcn@latest add",
     "tailwindcss:init": "pnpm dlx tailwindcss init -p"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.10.0",
+    "@radix-ui/react-alert-dialog": "^1.1.6",
+    "@radix-ui/react-label": "^2.1.2",
     "@radix-ui/react-slot": "^1.1.2",
     "@rizrmdhn/api": "workspace:*",
+    "@rizrmdhn/validators": "workspace:*",
     "@t3-oss/env-core": "^0.12.0",
     "@tailwindcss/vite": "^4.0.3",
     "@tanstack/react-query": "catalog:",
@@ -28,9 +33,12 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.474.0",
+    "next-themes": "^0.4.4",
     "react": "catalog:react18",
     "react-dom": "catalog:react18",
+    "react-hook-form": "^7.54.2",
     "react-router": "^7.1.5",
+    "sonner": "^1.7.4",
     "superjson": "^2.2.2",
     "tailwind-merge": "^2.6.0",
     "tailwindcss": "^4.0.3",
