--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -26,6 +26,7 @@
     "@t3-oss/env-core": "^0.12.0",
     "@tailwindcss/vite": "^4.0.3",
     "@tanstack/react-query": "catalog:",
+    "@tanstack/react-query-devtools": "^5.66.0",
     "@trpc/client": "catalog:",
     "@trpc/react-query": "catalog:",
     "@trpc/server": "catalog:",
