refactor: update TypeScript configuration files to streamline include patterns and enhance cookie-based session handling

--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -19,6 +19,10 @@
     "zod": "^3.24.1"
   },
   "devDependencies": {
+    "@rizrmdhn/eslint-config": "workspace:*",
+    "@rizrmdhn/prettier-config": "workspace:*",
+    "@rizrmdhn/tailwind-config": "workspace:*",
+    "@rizrmdhn/tsconfig": "workspace:*",
     "@types/cors": "^2.8.17",
     "@types/express": "^5.0.0",
     "@types/node": "catalog:",
