--- a/packages/db/tsconfig.json
+++ b/packages/db/tsconfig.json
@@ -1,6 +1,5 @@
 {
   "extends": "@rizrmdhn/tsconfig/internal-package.json",
-  "compilerOptions": {},
-  "include": ["*.ts", "src"],
+  "include": ["src"],
   "exclude": ["node_modules"]
 }
