chore: update package.json dependencies, remove unused CSS file, and refactor UI components for improved readability and performance

--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -13,7 +13,7 @@
     "sort:package": "pnpm dlx sort-package-json",
     "tailwindcss:init": "pnpm dlx tailwindcss init -p",
     "typecheck": "tsc --noEmit",
-    "ui-add": "pnpm dlx shadcn@latest add",
+    "ui-add": "pnpm dlx shadcn@canary add",
     "with-env": "dotenv -e ../../.env --"
   },
   "dependencies": {
